add_executable(overlap_gaussian_orbitals overlap_gaussian_orbitals.cpp)
target_link_libraries(overlap_gaussian_orbitals PUBLIC dla_interface)

add_executable(matrix_multiplication matrix_multiplication.cpp)
target_link_libraries(matrix_multiplication PUBLIC dla_interface)

if (SCALAPACK_FOUND)
  add_executable(overlap_gaussian_orbitals_c overlap_gaussian_orbitals_c.cpp)
  target_link_libraries(overlap_gaussian_orbitals_c PUBLIC dla_interface)
endif()
